--- a/Software/MobileApp/SiouxPortalApp/www/index.html
+++ b/Software/MobileApp/SiouxPortalApp/www/index.html
@@ -19,16 +19,13 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="js/app.js"></script>
+    <script src="js/app.js"></script>    
+    <script src="js/fakeService.js"></script>
+    <script src='views/home/homeCtrl.js'></script>
+    <script src="views/member/memberCtrl.js"></script>
   </head>
-  <body ng-app="starter">
-
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
+  <body ng-app="SiouxApp">     
+    
+   <ion-nav-view></ion-nav-view>
   </body>
 </html>
